<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/weatherStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/merriweather_light"
                android:text="Clear"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_light"
                android:text="8°C"
                android:textAlignment="center"
                android:textColor="#EFEFEF"
                android:textSize="85sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cityView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/merriweather_light"
                android:text="Chisinau"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/updatedView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_light"
                android:text="@string/updated"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:typeface="normal" />
        </LinearLayout>

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center|fill"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            app:rowCount="3">

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="170dp"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal|center_vertical"
                app:layout_row="0"
                app:layout_rowWeight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_gravity="center_vertical|center_horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/can_t"
                        android:src="@drawable/wind" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_speed"
                        android:textAlignment="center"
                        android:textColor="#fff"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/windSpeedView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/value"
                        android:textAlignment="center"
                        android:textColor="#fff"
                        android:textSize="12sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="170dp"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal|center_vertical"
                app:layout_row="0"
                app:layout_rowWeight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_gravity="center_vertical|center_horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/thermometer" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min_temperature"
                        android:textAlignment="center"
                        android:textColor="#fff"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/minTemperatureView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/value"
                        android:textAlignment="center"
                        android:textColor="#fff"
                        android:textSize="12sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="170dp"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal|center_vertical"
                app:layout_row="1"
                app:layout_rowWeight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_gravity="center_vertical|center_horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/can_t"
                        android:src="@drawable/thermometer" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/max_temperature"
                        android:textAlignment="center"
                        android:textColor="#fff"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/maxTemperatureView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/value"
                        android:textAlignment="center"
                        android:textColor="#fff"
                        android:textSize="12sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="170dp"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal|center_vertical"
                app:layout_row="1"
                app:layout_rowWeight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_gravity="center_vertical|center_horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/can_t"
                        android:src="@drawable/reload" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/refresh"
                        android:textAlignment="center"
                        android:textColor="#fff"
                        android:textSize="12sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.gridlayout.widget.GridLayout>
    </LinearLayout>


    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Something went wrong"
        android:textColor="#fff"
        android:textSize="25sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>